# lesoon-third-sdk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  tox.ini
requirements/: core.txt  dev.txt  tests.txt
src/lesoon_third_sdk/: __init__.py
src/lesoon_third_sdk/dingtalk/: __init__.py  api.py  base.py  client.py
src/lesoon_third_sdk/senselink/: __init__.py  base.py  exceptions.py
src/lesoon_third_sdk/senselink/client/: __init__.py  base.py
src/lesoon_third_sdk/senselink/client/api/: __init__.py  attendance.py  base.py  common.py  event.py
src/lesoon_third_sdk/wechat/: __init__.py  api.py  base.py  client.py
