[metadata]
name = lesoon-third-sdk
version = attr: lesoon_third_sdk.__version__
author = huang.jw
author_email = huangjiawen@belle.net.cn
description = A Third Integration Sdk For Python Restful Application
keywords = Flask, Dingtalk, Wechat
classifiers =
    Development Status :: 1 - Start
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
python_requires = >= 3.8
include_package_data = True
zip_safe = False
install_requires =
    lesoon-common>=0.0.3
    dingtalk-sdk>=1.3.8
    wechatpy==2.0.0.alpha24
    cryptography>=35.0.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
    ignore::DeprecationWarning

[yapf]
based_on_style = google

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
files = src/**/*.py
python_version = 3.8
show_error_codes = True
allow_redefinition = True
no_implicit_optional = False
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = False
ignore_missing_imports = True

[mypy-sqlalchemy.*]
ignore_missing_imports = True

[mypy-marshmallow_sqlalchemy.*]
ignore_missing_imports = True

[mypy-flask_sqlalchemy.*]
ignore_missing_imports = True

[mypy-flask_marshmallow.*]
ignore_missing_imports = True

[mypy-lesoon_common.*]
ignore_missing_imports = True
